fix code bloxk alignment

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -33,7 +33,7 @@ h6,
 strong,
 small,
 li,
-code,
+.language-plaintext, //a code block
 blockquote,
 .alignment-1 {
   max-width: 500px;
